# packaging

./: .gitignore  Pipfile  pyproject.toml
.github/workflows/: publish.yml
src/example_package_jeff_hsu/: __init__.py  example.py
tests/: test_example.py
