[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_jeff_hsu"
version = "1.0.1"
authors = [
  { name="Jeff Hsu", email="adf159776@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "validators >= 0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/meetjeff/packaging"